# mcgrab-rs

./: .gitignore  1.12.2.formatted.json  Cargo.toml
src/: downloader.rs  main.rs  structs.rs
